# awsiot-tempsense-esp32

./: .gitignore  Cargo.toml  sdkconfig.defaults
src/: certs.rs  config.rs  main.rs  modules.rs
src/modules/: cert_module.rs  led_printer_module.rs  mqtt_module.rs  ntp_module.rs  peripherals_module.rs  sht30_module.rs  ws2812_display_module.rs
